GNOME Bugzilla – Bug 644403
screen: idle-delay gets lowered, but not raised
Last modified: 2011-03-11 00:06:12 UTC
I set 'Turn off after' to 1min, and I notice org.gnome.desktop.session idle-delay getting set to 1 Then I set 'Turn off' back to 10 min, but idle-delay stays at 1. My screen constantly dims :-(