Screen: Fix the delay acrobatics

The special-casing of lock delay 0 was wrong, since the > 0 check
was happening after converting to absolute.
https://bugzilla.gnome.org/show_bug.cgi?id=644403